# iaiken

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  Untitled.ipynb  flake.nix
crates/aiken-repl/: Cargo.toml
crates/aiken-repl/src/: lib.rs  main.rs
crates/aiken-repl/src/evaluator/: mod.rs
crates/iaiken/: Cargo.toml  test_connection.json
crates/iaiken/src/: install.rs  main.rs
crates/iaiken/src/connection/: control.rs  shell.rs
crates/iaiken/src/connection/shell/: execute.rs  kernel_info.rs
crates/iaiken/src/eval/: mod.rs
crates/iaiken/src/messages/: iopub.rs  mod.rs  wire.rs
crates/iaiken/src/messages/shell/: execute.rs  kernel_info.rs
src/: connection.rs  install.rs  kernel.rs  main.rs
src/connection/: control.rs  heartbeat.rs  iopub.rs  shell.rs
src/messages/: crypto.rs  execute.rs  kernel_info.rs  mod.rs
src/messages/control/: shutdown.rs
src/messages/shell/: execute.rs  kernel_info.rs
