[package]
name = "aiken-kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
zeromq = "0.4.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
uuid = { version = "1.18.1", features = ["v4"] }
anyhow = "1.0.99"
clap = "4.5.47"
