[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
description = "Aiken REPL and Jupyter Kernel"
documentation = "https://aiken-lang.org"
version = "0.0.1"
edition = "2024"
repository = "https://github.com/rober-m/iaiken"
homepage = "https://github.com/rober-m/iaiken"
license = "Apache-2.0"
authors = [
    "Robertino Martinez <r@robertinom.com>"
]
rust-version = "1.88.0"

[workspace.dependencies]
hex = "0.4.3"
miette = { version = "7.6.0", features = ["fancy"]}
